--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB_URI = ""
 
-RESEND_API_KEY = "re_XhCsEcBN_KLcyJNuyPmtJVf6zmXMtx6eE"
+# RESEND_API_KEY = "re_XhCsEcBN_KLcyJNuyPmtJVf6zmXMtx6eE"
+RESEND_API_KEY = ""
+NEXTAUTH_SECRET = vrajsensei
